# PDAI-Project

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  README.md  architecture.html  deploy.sh  docker-compose.yml  init-db.sql  langgraph.json  pyproject.toml  report.md  test_instructions.md
.claude/skills/mcp-setup/: SKILL.md
.claude/skills/mcp-setup/references/: known-servers.md
.langgraph_api/: .langgraph_ops.pckl
agent_service/: config.py  db.py  main.py  models.py
agent_service/agents/: critic.py  filter.py  pipeline.py  signals.py  synthesizer.py
agent_service/ingestion/: arxiv_source.py  github_trending.py  normalize.py  rss_news.py  semantic_scholar.py
agent_service/prompts/: critic.txt  filter.txt  monthly_report.txt  weekly_synthesis.txt
agent_service/templates/: report.qmd
dashboard/: index.html
infra/: DEPLOYMENT.md  README.md  deploy.sh  main.tf  outputs.tf  parameters.json.example  template.yaml  terraform.tfvars.example  user-data.sh  variables.tf
lambda-triggers/: README.md  daily_ingest.py  monthly_report.py  weekly_report.py
n8n-workflows/: daily-ingest.json  monthly-report.json  weekly-briefing.json
prompts/: dashboard-upgrade.md  prompt-improvements.md  semantic-search-and-signal-details.md
